--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity"  android:theme="@style/AppTheme.Dark">
+        <activity
+            android:name=".Activities.Activities.MainActivity"
+            android:theme="@style/AppTheme.Dark"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
+        <activity android:name=".Activities.Activities.LoginActivity"
+            android:theme="@style/AppTheme.Dark"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Activities.LoginActivity">
-
-
         </activity>
     </application>
 
